<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/information_bg" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_location" />

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3.0dip"
                android:scrollbars="none" >

                <TextView
                    android:id="@+id/information_location"
                    style="@style/TextAppearance.Preference.SecondaryItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false" />
            </HorizontalScrollView>
        </TableRow>

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_size" />

            <TextView
                android:id="@+id/information_size"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:padding="3.0dip" />
        </TableRow>

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_modified" />

            <TextView
                android:id="@+id/information_modified"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:padding="3.0dip" />
        </TableRow>

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_canread" />

            <TextView
                android:id="@+id/information_canread"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:padding="3.0dip" />
        </TableRow>

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_canwrite" />

            <TextView
                android:id="@+id/information_canwrite"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:padding="3.0dip" />
        </TableRow>

        <TableRow >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_column="1"
                android:gravity="right"
                android:padding="3.0dip"
                android:text="@string/file_info_ishidden" />

            <TextView
                android:id="@+id/information_ishidden"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:padding="3.0dip" />
        </TableRow>
    </TableLayout>

</ScrollView>