<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_browse_list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_normal"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/current_path_pane"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/path_pane_bg"
                android:gravity="center_vertical"
                android:maxWidth="300.0dip" >

                <LinearLayout
                    android:id="@+id/current_path_scroller"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/current_path_view"
                        style="@style/TextAppearance.Preference.PrimaryItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:paddingLeft="10.0dip"
                        android:singleLine="true" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/path_pane_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/path_pane_up_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginLeft="5.0dip"
            android:src="@drawable/path_up_level" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/list_item_background_normal" >

        <ListView
            android:id="@+id/file_path_list"
            style="@style/Widget.ListView.NoDivider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fastScrollEnabled="true"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/empty_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/no_file"
                android:textSize="27.0px" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/dropdown_navigation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dropdown"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/dropdown_navigation_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/sd_not_available_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25.0px"
                android:src="@drawable/sd_not_available" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enable_sd_card"
                android:textSize="22.0px" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/moving_operation_bar"
        style="@style/BottomButtonBar"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_moving_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/operation_paste" />

        <Button
            android:id="@+id/button_moving_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_operation_bar"
        style="@style/BottomButtonBar"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_pick_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/button_pick_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/operation_bar_bg"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/button_operation_delete"
            style="@style/FileViewOperationButtonStytle"
            android:drawableTop="@drawable/operation_button_delete"
            android:text="@string/operation_delete" />

        <TextView
            android:id="@+id/button_operation_copy"
            style="@style/FileViewOperationButtonStytle"
            android:drawableTop="@drawable/operation_button_copy"
            android:text="@string/operation_copy" />

        <TextView
            android:id="@+id/button_operation_move"
            style="@style/FileViewOperationButtonStytle"
            android:drawableTop="@drawable/operation_button_move"
            android:text="@string/operation_move" />

        <TextView
            android:id="@+id/button_operation_send"
            style="@style/FileViewOperationButtonStytle"
            android:drawableTop="@drawable/operation_button_send"
            android:text="@string/operation_send" />

        <TextView
            android:id="@+id/button_operation_cancel"
            style="@style/FileViewOperationButtonStytle"
            android:drawableTop="@drawable/operation_button_cancel"
            android:text="@string/operation_cancel" />
    </LinearLayout>
</LinearLayout>