<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/server_pannel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@id/marsui_tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="@drawable/list_item_background_normal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                style="@style/TextAppearance.Preference.PrimaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30.0px"
                android:singleLine="true"
                android:text="@string/wifi_state" />

            <TextView
                android:id="@+id/wifi_state"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14.0px"
                android:singleLine="true"
                android:text="@string/wifi_state" />

            <ImageView
                android:id="@+id/wifi_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25.0px"
                android:src="@drawable/wifi_state4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/instruction_pre"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction_pre" />

            <TextView
                android:id="@+id/instruction"
                style="@style/TextAppearance.Preference.SecondaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15.0px"
                android:background="@drawable/ipaddress_bg"
                android:gravity="center"
                android:minWidth="150.0px"
                android:paddingLeft="15.0px"
                android:paddingRight="15.0px"
                android:singleLine="true"
                android:textColor="#ffffffff"
                android:textSize="22.0dip"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/start_stop_button"
                android:layout_width="210.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30.0px"
                android:layout_marginTop="15.0px"
                android:background="@drawable/remote_button_bg"
                android:gravity="center" >

                <TextView
                    android:id="@+id/start_stop_button_text"
                    style="@style/TextAppearance.Preference.PrimaryItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10.0px"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>